<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".TrainingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <AutoCompleteTextView
            android:id="@+id/newRoomIdentifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newRoomNameHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:weightSum="20" >

        <ToggleButton
            android:id="@+id/ToggleDataCollection"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:textOff="@string/beginTraining"
            android:textOn="@string/stopTraining" />

        <Button
            android:id="@+id/submitDataButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="15"
            android:enabled="false"
            android:text="@string/submitDataForRoom_" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewInTrainingActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60" >

        <TextView
            android:id="@+id/logTextViewInTrainingActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>