<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="10"
        android:weightSum="10" >

        <Button
            android:id="@+id/locateMeButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:text="@string/locateMeBtnString" />

        <ToggleButton
            android:id="@+id/trackingToggler"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textOff="@string/trackingTogglerStringOff"
            android:textOn="@string/trackingTogglerStringOn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultsArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="vertical" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40" >

        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>